--- a/CodingOnCountry/wwwroot/css/style.css
+++ b/CodingOnCountry/wwwroot/css/style.css
@@ -68,10 +68,12 @@ footer {
     margin: 100px auto 0 auto;
     bottom: 0;
     margin: 0;
+    margin-top: 50px;
     padding: 20px 0;
-    height: 100%;
+    max-height: 50vh;
     color: var(--main-colour-light);
     background-color: var(--main-colour-dark);
+    text-align:left;
 }
 
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
@@ -145,7 +147,7 @@ footer {
 
 
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
-/* Image Bar //////////////////////////////////////////////////////////////////////////////*/
+/* Image Warning Bar //////////////////////////////////////////////////////////////////////////////*/
 
 .warning {
     transition: opacity 125ms linear;
@@ -213,16 +215,16 @@ footer {
     color: var(--main-colour-light);
 }
 
-    .heroContent h1 {
-        color: var(--main-colour-light);
-        font-size: 50pt;
-    }
+.heroContent h1 {
+    color: var(--main-colour-light);
+    font-size: 50pt;
+}
 
-    .heroContent p {
-        font-size: 20px;
-        font-weight: 400;
-        margin: 40px 0;
-    }
+.heroContent p {
+    font-size: 20px;
+    font-weight: 400;
+    margin: 40px 0;
+}
 
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
 /* Home About Section /////////////////////////////////////////////////////////////////////////////*/
@@ -603,12 +605,13 @@ footer {
     margin-left: 30px;
     text-align: right;
     flex-wrap: wrap;
+   
 }
 
-    #fbFooter p {
-        margin-right: 30px;
-        padding-top: 10px;
-    }
+#fbFooter p {
+    margin-right: 30px;
+    padding-top: 10px;
+}
 
 .fbFooterFrame {
     max-width: calc(100vw - 60px);
@@ -618,8 +621,23 @@ footer {
 
 
 
+#rawCampList {
+    display: none;
+}
 
+#adminAccess {
+    color: var(--main-colour-light);
+    background-color: var(--main-colour-dark);
+    border: none;
+    padding: 10px;
+    margin: 30px;
+    cursor: pointer;
+}
 
+#adminAccess:hover {
+    color: var(--main-colour-dark);
+    background-color: var(--main-colour-light);
+}
 
 
 
@@ -731,6 +749,9 @@ footer {
         display: none;
     }
 
+    #fbFooter {
+        text-align: left;
+    }
  
 }
 
