--- a/CodingOnCountry/Views/Camps/Create.cshtml
+++ b/CodingOnCountry/Views/Camps/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form form method="post" enctype="multipart/form-data" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -52,12 +52,23 @@
                 <input asp-for="CampEndTime" class="form-control" />
                 <span asp-validation-for="CampEndTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+           
+                <div>
+                    <p>Upload one or more files using this form:</p>
+                    <input type="file" name="files" multiple />
+                </div>
+
+                <div>
+                    <input type="submit" value="Upload" />
+                </div>
+            </form>
+        
     </div>
 </div>
+
+
+
+
 
 <div>
     <a asp-action="Index">Back to List</a>
