--- a/CodingOnCountry/Views/Home/slideshow.html
+++ b/CodingOnCountry/Views/Home/slideshow.html
@@ -1,19 +1,19 @@
 <div id="slideshow">
     <div id="slides">
-        <img src="../imgs/dog1.jpg" class="slideImage">
-        <img src="../imgs/dog2.jpg" class="slideImage">
-        <img src="../imgs/dog1.jpg" class="slideImage">
-        <img src="../imgs/dog2.jpg" class="slideImage">
-        <img src="../imgs/dog1.jpg" class="slideImage">
-        <img src="../imgs/dog1.jpg" class="slideImage">
-        <img src="../imgs/dog2.jpg" class="slideImage">
-        <img src="../imgs/dog1.jpg" class="slideImage">
-        <img src="../imgs/dog2.jpg" class="slideImage">
-        <img src="../imgs/dog1.jpg" class="slideImage">
-        <img src="../imgs/dog2.jpg" class="slideImage">
-        <img src="../imgs/dog1.jpg" class="slideImage">
-        <img src="../imgs/dog1.jpg" class="slideImage">
-        <img src="../imgs/dog2.jpg" class="slideImage">
+        <img src="../imgs/dog1.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog2.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog1.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog2.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog1.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog1.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog2.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog1.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog2.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog1.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog2.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog1.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog1.jpg" class="slideImage camp_01">
+        <img src="../imgs/dog2.jpg" class="slideImage camp_01">
         
     </div>
     <button id="left" onclick="iterate(-1); blurInput('left');"><img src="../imgs/prev.png"></button>
